themes/cp_themes/default/css/global.css
/* CSS */


/* -------------------------------------
/*  Standardize for all browsers
/* -------------------------------------*/

html, body, p, img, div, h1, h2, h3, h4, h5, h6, ol, ul, li, form, input, select, option {
	margin:					0;
	padding:				0;
}

html {
	background-color:		#3e4c54;
}

body {
	background-color:		#fff;
	font-family:			Helvetica, Arial, sans-serif;
	font-size:				76%;
	min-width: 				930px;
}

optgroup option {
	padding-left:			10px;
}

img, fieldse {
	border:					0;
}

ul {
	list-style:				none;
}

fieldset {
	border:1px solid;
}

textarea,
input[type=text],
input[type=password] {
	font-family:			Helvetica, Arial, sans-serif;
	font-size:				100%;
	border:					1px solid #b6c0c2;
	color:					#5f6c74;
	outline:				0;
  	padding:				4px;
	width:					99%;
	
	border-radius:			3px;
	-moz-border-radius:		3px;
  	-webkit-border-radius:	3px;
}

textarea {
	resize:					vertical;
	-moz-box-sizing:		border-box; /* firefox never does 100% textareas without this */
}

textarea:focus,
input[type=text]:focus,
input[type=password]:focus {
	border:					2px solid #B2BEC0;
	padding:				3px;
}

/* -------------------------------------
/*  Links
/* -------------------------------------*/

/* General Link Styles */

a:link {
	color:					#5f6c74;
	text-decoration:		none;
}

a:visited {
	color:					#859199;
	text-decoration:		none;
}

a:hover {
	color:					#e11842;
	text-decoration:		underline;
}

a:focus {
	color:					#e11842;
}


/* Table Link Styles */

table a:link {
	color:					#5f6c74;
	text-decoration:		underline;
}

table a:visited {
	color:					#859199;
	text-decoration:		underline;
}

table a:hover {
	color:					#e11842;
}


/* Content Area Link Styles */

.pageContents a:link,
.pageContents a:visited {
	color:					#E7174B;
	text-decoration:		none;
}

.pageContents a:hover {
	text-decoration:		underline;
}

.pageContents a.submit {
	color:					#fff;
	-moz-border-radius:		3px;
	-webkit-border-radius:	3px;
}


/* Button Link Styles */


.button {
	float:					left;
	margin-right:			6px;
}

.button a:link,
.button a:visited {
	color:					#5f6c74;
	display:				block;
	padding:				5px 9px;
}

.button a:hover {
	color:					#FFF;
}


.cp_button {
	float:					left;
	margin:					0 14px 14px 14px;
}

.cp_button a:link,
.cp_button a:visited {
	background:				#d0d9e1;
	color:					#5f6c74;
	display:				block;
	padding:      			4px 8px;
	text-align: 			center;
}

.cp_button a:hover {
	color:					#fff;
	background:				#e11842;
	text-decoration:		none;
}

/* -------------------------------------
/*  Common
/* -------------------------------------*/

.ui-widget-content ul {
	margin:5px;	
}

.ui-datepicker {
	z-index:			99;
}

.ui-resizable-e {
	right:				0px;
	margin-top:			2px;
	margin-right:		-10px;
	height:				10px!important;
	width:				10px;
	background:			url("<?=$cp_theme_url?>images/resize_handle.gif") no-repeat right bottom;
	cursor:				w-resize;
	float:				right;
	position:			relative!important;
}

.tableFooter p {
	margin-bottom:3px;
}

.notice {
	color:				#ce0000;
	font-weight: 		bold;
	margin: 			5px 0;
}

em.alert {
	color:				#ce0000;
	font-weight: 		bold;
}

.failure {
	color:				#ce0000;
}

.success {
	color:				#007822;
}

.go_notice {
	color:				#007822;
	font-weight: 		bold;
	margin: 			10px 0;
}

th .go_notice {
	color:				#bce99a;
}

.callout {
	padding:			4px 8px;
}

.cupRunnethOver {
	overflow:			auto!important;
}

ul.bullets li {
	padding:			3px 11px;
	background:			transparent url('<?=$cp_theme_url?>images/list_arrow.gif') center left no-repeat;
}

.clear {
	clear:				both;
}

.clear_left {
	clear:				left;
}

.clear_right {
	clear:				right;
}

.align_right {
	text-align:			right;
}

.center {
	text-align:			center;
}

.center h1,
.center h2 {
	text-align:left;
	margin-bottom:10px;
}


.genericHeading {
	margin:				8px 0;
}

.visualEscapism {
	position:			absolute;
    left:				-999em;
    width:				1em;
    overflow:			hidden;
}

ul.videos li a {
	background:			transparent url('<?=$cp_theme_url?>images/list_item_video.gif') 15px no-repeat;
}

ul.bulleted {
	list-style-type:		disc;
	margin-left:			15px;
}

.submit {
	background:   #f72a58 url('<?=$cp_theme_url?>images/backgrounds_sprite.png') repeat-x 0 -298px;
	padding:      4px 8px 5px 8px;
	color:        #fff/*!important*/;
	border:       0;
}

.less_important_bttn,
.rightNav .submit {
	font-weight:	normal;
	background:		#d0d9e1;
	color:			#34424b;
}

.less_important_bttn:hover,
.rightNav a.submit:hover {
	background-color:#e11842;
	text-decoration:none;
}

.submit_alt {
	background:			#FFF url('<?=$cp_theme_url?>images/submit_alt_button_bg.jpg') bottom left repeat-x!important;
	color:				#465660!important;
}

input.submit,
button.submit,
.submit_alt,
.button a.submit {
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

.disabled_field {
	background-color:	#F0F0F0!important;
	background-image:	none!important;
	color:				#7F7F7F!important;
	border:				1px solid #7F7F7F!important;
	cursor:				default!important;
}

select.select {
	margin-right:		5px;
}

.module_textarea {
	width: 99%;
}

.pageContents span.button .submit,
span.button .submit {
	color:#fff;
}

/* for those elements that just don't like to be next to each other */
.shun {
	margin-bottom: 14px!important;
}

.subtext {
	font-size:			11px;
}

.overview {
	margin-bottom:		15px;
}

.overview .overviewItemName {
	width:				30%;
}

.overview .overviewItemDesc {
	width:				65%;
}

.overview .overviewItemHelp {
	width:				5%;
	text-align:			center;
}

/* -------------------------------------
/*  Branding
/* -------------------------------------*/

#branding {
	background: 		#27343c url('<?=$cp_theme_url?>images/backgrounds_sprite.png') repeat-x 0 0;
	height:					17px;
	margin-bottom:	5px;
}


/* -------------------------------------
/*  Main Menu
/* -------------------------------------*/

#mainMenu {
	background-color:	#27343C;
	color:				#fff;
}

/* Position the menu */
#mainMenu ul {
	list-style:			none;
}
/* ... */

